social buttons and not-interested-pinky-box

--- a/db/cms_fixtures/localhost/pages/index/lastpage/_lastpage.yml
+++ b/db/cms_fixtures/localhost/pages/index/lastpage/_lastpage.yml
@@ -1,7 +1,7 @@
----
+--- 
 label: lastpage
 layout: application
 parent: index
-target_page: !!null 
+target_page: 
 is_published: true
 position: 0
