--- a/db/cms_fixtures/localhost/pages/index/_index.yml
+++ b/db/cms_fixtures/localhost/pages/index/_index.yml
@@ -1,7 +1,7 @@
----
+--- 
 label: home
 layout: application
-parent: !!null 
-target_page: !!null 
+parent: 
+target_page: 
 is_published: true
 position: 0
